--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tiptap/starter-kit": "^3.11.0",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "dompurify": "^3.3.0",
     "framer-motion": "^12.23.24",
     "next": "16.0.3",
     "react": "19.2.0",
@@ -45,6 +46,7 @@
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@tailwindcss/postcss": "^4",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
